tests/src/frontend/syntax/invalid/macro_collection_initializer.sk
trait TR {
  macro fun f(): String {
    (#ThisClass[]).toString()
  }
}

extension class Vector uses TR

fun main(): void {
  print_string(Vector[""].f())
}
